<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    app:layoutDescription="@xml/onboarding_scene"
    android:background="@color/onboarding_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:id="@+id/headingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/heading_text"
        android:lineSpacingExtra="4sp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/centerPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <io.kamara.android.samples.views.OnboardingBubbleItem
        android:id="@+id/firstBubble"
        android:layout_width="@dimen/onboarding_bubble_item_size_xlarge"
        android:layout_height="@dimen/onboarding_bubble_item_size_xlarge"
        android:background="@drawable/bubble_background"
        android:backgroundTint="@color/color_onboarding_page1"
        app:layout_constraintCircle="@+id/centerPlaceholder"
        app:layout_constraintCircleAngle="290"
        app:layout_constraintCircleRadius="90dp"
        app:bl_text="@string/first_bubble_title"
        app:bl_text_color="@color/text_color_onboarding_page1"
        app:bl_description="@string/first_bubble_description"
        app:bl_margin_top="98dp"
        app:bl_margin_start="117dp"
        app:bl_margin_end="53dp"
        app:bl_alignment="start"
        tools:backgroundTint="@color/color_onboarding_page1"
        tools:ignore="MissingConstraints" />

    <io.kamara.android.samples.views.OnboardingBubbleItem
        android:id="@+id/secondBubble"
        android:layout_width="@dimen/onboarding_bubble_item_size_medium"
        android:layout_height="@dimen/onboarding_bubble_item_size_medium"
        android:background="@drawable/bubble_background"
        android:backgroundTint="@color/color_onboarding_page2"
        app:layout_constraintCircle="@+id/centerPlaceholder"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintCircleRadius="160dp"
        app:bl_text="@string/second_bubble_title"
        app:bl_text_color="@color/text_color_onboarding_page2"
        app:bl_description="@string/second_bubble_description"
        app:bl_margin_top="133dp"
        app:bl_margin_start="42dp"
        app:bl_margin_end="130dp"
        app:bl_alignment="end"
        tools:backgroundTint="@color/color_onboarding_page2"
        tools:ignore="MissingConstraints" />

    <io.kamara.android.samples.views.OnboardingBubbleItem
        android:id="@+id/thirdBubble"
        android:layout_width="@dimen/onboarding_bubble_item_size_small"
        android:layout_height="@dimen/onboarding_bubble_item_size_small"
        android:background="@drawable/bubble_background"
        android:backgroundTint="@color/color_onboarding_page3"
        app:layout_constraintCircle="@+id/centerPlaceholder"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintCircleRadius="240dp"
        app:bl_text="@string/third_bubble_title"
        app:bl_text_color="@color/text_color_onboarding_page3"
        app:bl_description="@string/third_bubble_description"
        app:bl_margin_top="34dp"
        app:bl_margin_start="89dp"
        app:bl_margin_end="89dp"
        app:bl_alignment="center"
        tools:backgroundTint="@color/color_onboarding_page3"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.motion.widget.MotionLayout>